comment out print statements in wiki_scrape

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ IMRC_Proposal/Final_SNL_Presentation.pptx
 *.svg
 *.svg
 name_to_titles.png
+IMRC_Proposal/Final_writeup.docx
+IMRC_Proposal/~$nal_writeup.docx
